2014-02-02 Yavor Doganov  <yavor@gnu.org>

	* configure.ac: Force use for fake main on kfreebsd to work around bug
	handling large number of arguments.
	* Documentation/coding-standards.texi:
	* Documentation/manual/manual.texi:
	* Tools/cvtenc.1:
	* Tools/pldes.1:
	* Tools/defaults.1:
	* Tools/autogsdoc.1:
	* Tools/gdomap.8:
	Minor cosmetic tweaks

2014-02-02 Riccardo Mottola <rm@gnu.org>

	* Source/NSString.m (stringByResolvingSymlinksInPath)
	On GLIBC and FreeBSD use sysconf(_SC_SYMLOOP_MAX) instead of just
	MAXSYMLINKS. For HURD this is necessary, since the latter is not 
	defined.

2014-01-31  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/NSUserNotification.m:
	Implemented repetitions, moved "presented" flagging to the appropriate
	method (subclassers may have different opinions about presentation,
	i.e. gnustep-gui might want to prevent presentation if application
	is already frontmost [the OSX behavior]). Improved -description
	(similar to OSX's output, eases cross-platform debugging).
	* Headers/Foundation/Foundation.h:
	added NSUserNotification.h

2014-01-30  Marcus Mueller <znek@mulle-kybernetik.com>

	* Headers/Foundation/NSUserNotification.h:
	* Source/NSUserNotification.m:
	Added default implementation which provides infrastructure but no real
	transport mechanisms. An implementation utilizing DBus
	(Desktop Notifications Specification) is provided via DBusKit.

2014-01-26  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSKeyValueObserving.h,
	* Source/NSKeyValueObserving.m: Add method
	-keyPathsForValuesAffectingValueForKey:.

2014-01-25  Frederik <ego@frederikseiffert.de>

	* Source/NSKeyValueObserving.m: When using
	(NSKeyValueObservingOptionInitial | NSKeyValueObservingOptionNew)
	as option for observeValueForKeyPath:ofObject:change:context:,
	we should use -valueForKeyPath: instead of -valueForKey: to retrieve
	the current (initial) value.

2014-01-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFCallInvocation.m: